Correction alignement de cette vidéo YouTube incluse

--- a/themes/alchemy/static/css/style.css
+++ b/themes/alchemy/static/css/style.css
@@ -68,7 +68,7 @@ p {
     font-feature-settings: "liga", "onum", "pnum", "kern"
 }
 
-body img {
+body img, body iframe {
     display: block;
     margin: 0 auto;
 }
